# ISpooferMotion-V2

./: .env.production  .gitattributes  .gitignore  .gitmodules  .markdownlintignore  .prettierignore  CONTRIBUTING.md  README.md  app.js  cosmic-gold-theme.json  cyberpunk-glass-theme.json  er.name Your Name  eslint.config.mjs  example-theme-with-transparency.json  firestore.rules  index.html  loading.html  locales.js  main.js  package-lock.json  package.json  plugin-optimized.lua  preload.js  selene.toml  styles.css  tsconfig.json  ui.js  vite.config.ts
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
modules/: window.js
modules/utils/: asset-creator-resolver.js  asset-downloader.js  asset-server.js  assets-api.js  common.js  ipc-handlers.js  mesh-converter.js  plugin-updater.js  roblox-api.js  transfer-handlers.js  update-manager.js
scripts/: build-plugin.mjs  clear-dev-state.mjs  make-mac-icon.sh
src/: App.tsx  bindings.ts  index.css  main.tsx  tauri-mock.ts  vite-env.d.ts
src-tauri/: Cargo.toml  clippy.toml  tauri.conf.json  tauri.dev.conf.json  test_specta.rs
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: main.json
src-tauri/plugin/: .luaurc  plugin.luau  selene.toml
src-tauri/plugin/src/bridge/: discovery.luau  polling.luau
src-tauri/plugin/src/config/: runtime.luau
src-tauri/plugin/src/net/: http.luau
src-tauri/plugin/src/patch/: mesh.luau  patcher.luau
src-tauri/plugin/src/scan/: properties.luau  scanner.luau
src-tauri/plugin/src/state/: registry.luau
src-tauri/plugin/src/types/: assets.luau
src-tauri/plugin/src/ui/: gui.luau
src-tauri/plugin/src/util/: assets.luau
src-tauri/plugin/src/version/: version.luau
src-tauri/src/: api_dump.rs  error.rs  lib.rs  main.rs  utils.rs
src-tauri/src/commands/: assets.rs  discord.rs  fs.rs  jobs.rs  mod.rs  resolver.rs  roblox_status.rs  session.rs  studio.rs
src-tauri/src/commands/auth/: cookies.rs  mod.rs  validation.rs
src-tauri/src/commands/ipc/: app.rs  logging.rs  mod.rs  profile.rs  secrets.rs
src-tauri/src/commands/ipc/job/: mod.rs  processor.rs  state.rs  types.rs
src-tauri/src/commands/spoofer/: diagnostics.rs  mod.rs  permissions.rs  place.rs  remote_cache.rs  upload.rs
src-tauri/src/commands/spoofer/download/: api.rs  mod.rs  resolution.rs  types.rs  validation.rs
src-tauri/src/commands/spoofer/memory/: mod.rs  stub.rs  windows.rs
src-tauri/src/studio_bridge/: messages.rs  middleware.rs  mod.rs  server.rs
src/components/: AnimationPreview.tsx  ErrorBoundary.tsx  PlaceIdSelector.tsx  RobloxStatusBanner.tsx
src/components/layout/: QuickSettingsMenu.tsx  Sidebar.tsx  StatusBar.tsx  Titlebar.tsx
src/components/modals/: CreditsModal.tsx  ResultsModal.tsx
src/components/ui/: JsonViewer.tsx
src/contexts/: ConfigContext.tsx  LanguageContext.tsx  StudioConnectionContext.tsx  ThemeContext.tsx
src/hooks/: useCloudThemeSync.ts  useDiscordLogin.ts  useStudioAssetPoll.ts  useStudioConnection.ts
src/stores/: configStore.ts  spooferStore.ts
src/types/: discord.ts  discordAuth.ts  ism-library.d.ts  tauriEvents.ts
src/utils/: cn.ts  debugLogger.browser.test.ts  debugLogger.ts  jobTypes.ts  notifyError.ts  pluginBridge.ts  robloxAnimParser.ts  robloxAudio.ts  robloxProfiles.test.ts  robloxProfiles.ts  robloxRig.ts  spoofingLogs.test.ts  spoofingLogs.ts  studioBridge.ts  studioScan.ts  tauriRuntime.ts
(+32 files in other folders)
